# VoxTrans

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  I18N_HANDOFF.md  LICENSE  README.md  README_EN.md  build-release.ps1  eslint.config.js  forum-post.md  github-release.md  index.html  notice.json  notice.md  package-lock.json  package.json  progress.md  release-post-v1.0.0.md  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AlignModel.ts  AsrModel.ts  DefaultSettingsResponse.ts  DemucsModel.ts  Provider.ts  SaveAppSettingsRequest.ts  SavedSettings.ts  SubtitleBorderStyle.ts  SubtitleBurnMode.ts  SubtitleLayoutStyle.ts  SubtitleLengthPreset.ts  SubtitleLineStyle.ts  SubtitleRenderStyle.ts  TerminologyGroup.ts  TerminologyTerm.ts  UserPreferencesResponse.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_transcribe_only.sql  0002_workspace_state.sql  0003_task_engine.sql  0003_task_history.sql  0004_task_evaluations.sql  0004_task_runs_queue_projection.sql  0004_task_words_json.sql  0005_drop_subtitle_editor_meta.sql  0005_task_llm_usage.sql  0006_task_translation_schema.sql  0007_rebuild_queue_items_for_dual_status.sql  0008_rebuild_tasks_with_subtitle_segments.sql  0009_task_llm_usage.sql  20260607000001_init.sql  20260609000001_step5_split_align.sql  20260610000001_task_frozen_settings.sql  20260611000001_settings_slim_render_style.sql  schema.sql
src-tauri/src/: app_state.rs  lib.rs  llm.rs  main.rs  prompt_builder.rs  prompts.rs
src-tauri/src/commands/: dto.rs  evaluation.rs  file.rs  history.rs  language.rs  llm.rs  logs.rs  mod.rs  model.rs  postprocess.rs  preferences.rs  preferences_mapping.rs  preferences_types.rs  prompts.rs  subtitle.rs  system.rs  task_engine.rs  transcribe.rs  transcribe_mapping.rs  transcribe_types.rs  transcription.rs  transcription_cli.rs  transcription_grouping.rs  transcription_tests.rs  transcription_types.rs  translate.rs  translate_artifacts.rs  translate_cli.rs  translate_cli_args.rs  translate_cli_step5.rs  translate_cli_terminology.rs  translate_cli_translation.rs  translate_connectivity.rs  translate_defaults.rs  translate_final_check.rs  translate_llm_settings.rs  translate_quality.rs  translate_step5_commands.rs  translate_step5_common.rs  translate_step5_mapping.rs  (+9 more)
src-tauri/src/commands/cli/: mod.rs  step5.rs  terminology.rs  translation.rs
src-tauri/src/commands/dto/: common.rs  mod.rs  task_engine.rs  youtube.rs
src-tauri/src/commands/workspace/: adapters.rs  artifact_migration.rs  execution_flow.rs  json_files.rs  log_payload.rs  meta.rs  output_completion.rs  pipeline_runner.rs  pipeline_steps.rs  preview.rs  progress.rs  queue_ops.rs  review_flow.rs  runtime_settings.rs  store.rs  task_logs.rs  translation_flow.rs  types.rs
src-tauri/src/db/: conversion.rs  mod.rs  models.rs  store.rs
src-tauri/src/domain/: aligned.rs  app_error.rs  error.rs  language.rs  language_registry.rs  mod.rs
src-tauri/src/domain/pipeline/: mod.rs
src-tauri/src/domain/task/: adapters.rs  mod.rs  runtime_settings.rs  stage.rs
src-tauri/src/services/: binary.rs  demucs.rs  evaluation.rs  file.rs  file_download.rs  final_subtitle.rs  frame_extract.rs  history.rs  hotwords.rs  llm.rs  logs.rs  mod.rs  output.rs  pipeline.rs  preferences.rs  preferences_normalize.rs  preferences_types.rs  subtitle.rs  subtitle_beautify.rs  subtitle_import.rs  subtitle_length.rs  subtitle_render.rs  subtitle_srt.rs  subtitle_step5.rs  system.rs  task_context.rs  task_engine.rs  task_executor.rs  task_log.rs  task_path.rs  task_projection.rs  task_projection_store.rs  task_stage_handlers.rs  task_stage_runner.rs  task_stage_store.rs  task_status.rs  task_subtitle_composer.rs  task_usage.rs  task_worker.rs  terminology.rs  (+11 more)
src-tauri/src/services/demucs/: audio_prep.rs  output_resolve.rs  process_runner.rs  progress_parse.rs
src-tauri/src/services/llm/: base_url.rs  batch.rs  cache.rs  cache_key.rs  chat_completions.rs  client.rs  error.rs  event_payload.rs  json.rs  json_candidates.rs  json_guard.rs  json_validator.rs  mod.rs  port.rs  retry.rs
src-tauri/src/services/model/: catalog.rs  download_http.rs  download_progress.rs  downloader.rs  mod.rs  path.rs  status.rs
src-tauri/src/services/postprocess/: hotword.rs  mod.rs  pipeline.rs  punctuation.rs  types.rs
src-tauri/src/services/prompts/: connectivity.rs  llm.rs  mod.rs  sentence_boundary.rs  subtitle_step5.rs  terminology.rs  translation.rs
src-tauri/src/services/subtitle_step5/: alignment_repair.rs  alignment_repair_neighbors.rs  alignment_repair_numbers.rs  alignment_score.rs  atomic_split_align_stage.rs  clauses.rs  constants.rs  final_check.rs  language_units.rs  mod.rs  numbers.rs  polish_postprocess.rs  polish_repair.rs  quality.rs  request_validation.rs  responses.rs  source_residue.rs  source_split.rs  source_split_boundaries.rs  source_split_readability.rs  source_split_score.rs  source_split_stage.rs  source_text.rs  split_parts.rs  stage_models.rs  terminology_filter.rs  tests.rs  text_utils.rs  time_utils.rs  translation_align_stage.rs  translation_candidate.rs  translation_polish_stage.rs  translation_split.rs  types.rs  watchability.rs  watchability_merge.rs  watchability_split.rs
src-tauri/src/services/task_executor/: events.rs  mod.rs  runtime.rs  stages.rs  state.rs
src-tauri/src/services/transcribe/: align_engine.rs  asr_align.rs
src-tauri/src/services/transcription/: correction.rs  domain.rs  mapper.rs  mod.rs  pipeline.rs  punctuation.rs  sentence_boundary.rs
src-tauri/src/services/translate/: mod.rs  pipeline.rs  prompt.rs  qa_agent.rs  qa_simple.rs  rules.rs  segment_optimize.rs  service.rs  types.rs  validation.rs
src-tauri/src/services/translation/: batches.rs  domain.rs  guardrails.rs  json_tool.rs  llm.rs  mod.rs  (+8 more)
voxtrans-core/: Cargo.toml
voxtrans-core/src/: audio.rs  binary.rs  lib.rs  provider.rs  transcribe_engine.rs  vad.rs
voxtrans-core/src/subtitle/: alignment.rs  beautify.rs  mod.rs  segmenter.rs  srt.rs  text_rules.rs
(+199 files in other folders)
