[workspace]
members = [
    "src-tauri",
    "voxtrans-core",
]
resolver = "2"
default-members = ["src-tauri"]

# qwen3-asr's weight conversion loops are devastatingly slow without optimization.
# Force opt-level 2 so dev builds don't spend 40+ seconds on model loading.
[profile.dev.package.qwen3-asr]
opt-level = 2
