[workspace]
members = [
    "src-tauri",
    "voxtrans-core",
]
resolver = "2"
default-members = ["src-tauri"]

# qwen3-asr's weight conversion loops are devastatingly slow without optimization.
# Force opt-level 2 so dev builds don't spend 40+ seconds on model loading.
[profile.dev.package.qwen3-asr]
opt-level = 2

# Same applies to the forced aligner — its safetensors weight loading (to_f16_vec)
# is equally slow under opt-level 0.
[profile.dev.package.qwen-forced-aligner-rs]
opt-level = 2

# CTC aligner weight load / gemm path is also slow under opt-level 0.
[profile.dev.package.ctc-forced-aligner-rs]
opt-level = 2

# Cohere ASR native engine — same story: safetensors f16 weight parsing +
# GPU upload in ModelWeights::load is slow under opt-level 0.
[profile.dev.package.native-transcribe]
opt-level = 2

# VAD model forward (gemm matrix multiplies + fbank FFT) is compute-bound.
# Use opt-level 3 so gemm's runtime CPU-feature detection (AVX2/SSE) kicks in.
[profile.dev.package.fireredvad]
opt-level = 3

# FFT and matrix kernels used by fireredvad — equally compute-bound.
[profile.dev.package.realfft]
opt-level = 3
[profile.dev.package.gemm]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
