[package]
name = "voxtrans"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.2", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rig-core = "0.33.0"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
chrono = { version = "0.4", features = ["clock"] }
hound = "3.5"
voxtrans-core = { path = "../voxtrans-core" }
tokio = { version = "1", features = ["rt", "sync", "time"] }
