[package]
name = "voxtrans"
version = "1.0.4"
edition = "2024"
default-run = "voxtrans"

[features]
default = []
cuda = ["qwen3-asr/cuda", "qwen-forced-aligner-rs/cuda"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.2", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "system-proxy"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate", "json"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
chrono = { version = "0.4", features = ["clock"] }
hound = "3.5"
pinyin = "0.10"
jieba-rs = "0.10"
base64 = "0.22"
voxtrans-core = { path = "../voxtrans-core" }
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
font-kit = "0.14"
async-trait = "0.1"
dashmap = "6"
thiserror = "2"
ts-rs = "10"
open = "5"
qwen3-asr = { path = "D:/qwen3-asr", default-features = false }
qwen-forced-aligner-rs = { path = "D:/qwen-aligner-rs", default-features = false, features = ["cpu"] }
# Cohere ASR — second backend, selected at runtime by `asr_model` name.
# Default features include CUDA; CPU inference also works when selected at runtime.
native-transcribe = { path = "D:/cohere-transcribe-native" }
