[package]
name = "voxtrans"
version = "1.4.1"
edition = "2024"
default-run = "voxtrans"

[features]
default = []
cuda = [
    "qwen3-asr/cuda",
    "qwen-forced-aligner-rs/cuda",
    "moss-transcribe-diarize-rs/cuda",
    "ctc-forced-aligner-rs/cuda",
]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.2", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "system-proxy", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate", "json"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
chrono = { version = "0.4", features = ["clock"] }
hound = "3.5"
jieba-rs = "0.10"
punkt = { git = "https://github.com/eclipse005/rust-punkt.git" }
base64 = "0.22"
voxtrans-core = { path = "../voxtrans-core" }
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
font-kit = "0.14"
async-trait = "0.1"
dashmap = "6"
thiserror = "2"
ts-rs = "10"
open = "5"
# CUDA engines ship precompiled multi-arch PTX (scheme B): end users need an
# NVIDIA game-ready driver only — no CUDA Toolkit / NVRTC. Installer still
# downloads cudart/cublas/cublasLt/curand from ModelScope (see apply-cuda-runtime.ps1).
qwen3-asr = { git = "https://github.com/eclipse005/qwen3-asr-rs.git", rev = "c6c98e2eb69d9892c43e650ebda297b1472443c7", default-features = false }
qwen-forced-aligner-rs = { git = "https://github.com/eclipse005/qwen-aligner-rs.git", rev = "a8d77031daaf4a216f07f53e72c803814afd3680", default-features = false, features = ["cpu"] }
# CTC forced aligner (MMS 300M) — pin rev like other engines.
ctc-forced-aligner-rs = { git = "https://github.com/eclipse005/ctc-aligner-rs.git", rev = "da7423ba94b3d674f261ddb4163ac0d62c1df1ca", default-features = false, features = ["cpu"] }
# Cohere ASR — second backend, selected at runtime by `asr_model` name.
# Default features include CUDA; CPU inference also works when selected at runtime.
native-transcribe = { git = "https://github.com/eclipse005/cohere-transcribe-rs.git", rev = "2f5df6616ea20347a9d907ba780aefef680894e7" }
# MOSS-Transcribe-Diarize Rust engine — third ASR backend. CPU by default;
# CUDA enabled via the workspace `cuda` feature.
moss-transcribe-diarize-rs = { git = "https://github.com/eclipse005/moss-transcribe-diarize-rs.git", rev = "4faf0dc9e665be266a258e5c1a28ce7e051fa59c", default-features = false }
