[package]
name = "voxtrans-core"
version = "0.1.0"
edition = "2024"

[dependencies]
parakeet-rs = { version = "0.3.4", default-features = false, features = ["cuda", "ort-defaults"] }
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", default-features = true, features = ["aac", "mp3", "isomp4"] }
